# Inspir-Ai-tion_The_DnD_Generative_AI

./: .gitignore  Dockerfile  README.md  dndsitetester.py  docker-compose.yml
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: config.ts  globals.css  layout.tsx  page.tsx
frontend/app/components/: nav.tsx  requestExample.tsx
frontend/app/components/brand/: Brand.tsx  brandLogo.tsx  brandText.tsx
iat_core/: Dockerfile  pyproject.toml
iat_core/app/: main.py
iat_core/app/dao/: __init__.py  items_dao.py  user_dao.py
iat_core/app/models/: __init__.py  items.py  user.py
iat_core/database/: details.py  models.py
iat_fe/: package-lock.json  package.json
iat_fe/src/app/: globals.css  layout.tsx  page.tsx
iat_fe/src/app/components/: nav.tsx
