[tool.poetry]
name = "iat-core"
version = "0.1.0"
description = ""
authors = ["Razvan Beldeanu <razvanbeldeanu789@gmail.com>"]
package-mode =  false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"